--- a/marketplace/core/templates/core/base.html
+++ b/marketplace/core/templates/core/base.html
@@ -21,7 +21,7 @@
             <a href="#" class="text-lg font-semibold  hover:text-gray-500">New Item</a>
             <a href="#" class="text-lg font-semibold hover:text-gray-500">Browse</a>
 
-            <a href="#" class="px-6 py-3 text-lg font-semibold bg-teal-500 text-white rounded-xl hover:tbg-teal-700">Sign Up</a>
+            <a href="{% url 'core:signup' %}" class="px-6 py-3 text-lg font-semibold bg-teal-500 text-white rounded-xl hover:tbg-teal-700">Sign Up</a>
             <a href="#" class="px-6 py-3 text-lg font-semibold bg-gray-500 text-white rounded-xl hover:tbg-teal-700">Log In</a>
         </div>
     </nav>
@@ -48,7 +48,7 @@
                     <a href="#" class="text-lg text-teal-500 hover:text-teal-500">About</a>
                 </li>
                 <li>
-                    <a href="{% url 'contact'% }" class="text-lg text-teal-500 hover:text-teal-500">contact</a>
+                    <a href="{% url 'core:contact'% }" class="text-lg text-teal-500 hover:text-teal-500">contact</a>
                 </li>
                 <li>
                     <a href="#" class="text-lg text-teal-500 hover:text-teal-500">Pivacy Policy</a>
