--- a/marketplace/item/templates/item/detail.html
+++ b/marketplace/item/templates/item/detail.html
@@ -28,7 +28,7 @@
             <div class="mt-6 p-6 bg-white rounded-xl">
                 <p> This is your item </p><br>
 
-                <a href="#" class="incline-block mt-6 px-6 py-3 text-lg font-semibold bg-teal-500 rounded-xl "> Edit </a>
+                <a href="{% url 'item:edit' item.id %}" class="incline-block mt-6 px-6 py-3 text-lg font-semibold bg-teal-500 rounded-xl "> Edit </a>
                 <a href="{% url 'item:delete' item.pk %}" class="incline-block mt-6 px-6 py-3 text-lg font-semibold bg-red-500 rounded-xl "> Delete </a>
             </div>
             {% else %}
